_sass/_syntax.scss
/* ==========================================================================
   Syntax highlighting
   ========================================================================== */

div.highlighter-rouge, figure.highlight {
  position: relative;
  margin-bottom: 0.6em;
  padding: 0em 0.6em;
  // border: 1px solid var(--global-border-color);
  border-radius: $border-radius;
  // background-color: var(--global-code-background-color);
  background-color: #171717;
  box-shadow: $box-shadow;
  font-size: 2em;

  &:before {
    position: absolute;
    top: 0;
    right: 0;
    padding: 0em;
    background-color: #07002b;
    // background-color: #282a2b;
    content: "\f121";
    font-family: "Font Awesome 6 Free" !important;
    font-size: $type-size-6;
    line-height: 1;
    text-transform: none;
    speak: none;
  }

  .highlight {
    margin: 0;
    font-family: $monospace;
    font-size: $type-size-6;
    line-height: 1.2;
  }
}

.highlight table td { padding: 5px; }
.highlight table pre { margin: 0; }


/*
   Solarized Light
   http://ethanschoonover.com/solarized

   SOLARIZED HEX      ROLE
   --------- -------- ------------------------------------------
   base01    #586e75  body text / default code / primary content
   base1     #93a1a1  comments / secondary content
   base3     #fdf6e3  background
   orange    #cb4b16  constants
   red       #dc322f  regex, special keywords
   blue      #22b3eb  reserved keywords
   cyan      #2aa198  strings, numbers
   green     #859900  operators, other keywords
   ========================================================================== */

/* Dark theme syntax colors (Monokai-inspired) */
/* Base text color for code blocks (apply broadly to all code elements) */
div.highlighter-rouge,
figure.highlight,
div.highlighter-rouge .highlight,
figure.highlight .highlight,
div.highlighter-rouge table,
figure.highlight table,
div.highlighter-rouge td,
figure.highlight td,
div.highlighter-rouge th,
figure.highlight th,
div.highlighter-rouge pre,
figure.highlight pre,
div.highlighter-rouge code,
figure.highlight code {
  color: #f8f8f2 !important;
}
// .highlight {
//   color: #f8f8f2 !important;
// }
.highlight .c  { color: #6a9956 } /* Comments */
.highlight .err{ color: #ff5555 } /* Errors */
.highlight .k  { color: #ff79c6 } /* Keywords */
.highlight .cp { color: #6a9956 } /* Preprocessor directives (#, include, define) */
.highlight .l  { color: #4dc9b0 } /* Literals */
.highlight .n  { color: #9cdcfd } /* Names (identifiers) */
.highlight .o  { color: #ff79c6 } /* Operators */
.highlight .x  { color: #f1fa8c } /* Other */
.highlight .p  { color: #f8f8f2 } /* Punctuation */
.highlight .gd { color: #ff5555 } /* Generic.Deleted */
.highlight .ge { color: #f8f8f2; font-style: italic } /* Generic.Emph */
.highlight .gr { color: #ff6e6e } /* Generic.Error */
.highlight .gh { color: #8be9fd } /* Generic.Heading */
.highlight .gi { color: #50fa7b } /* Generic.Inserted */
.highlight .go { color: #f8f8f2 } /* Generic.Output */
.highlight .gp { color: #f8f8f2 } /* Generic.Prompt */
.highlight .gs { color: #f8f8f2; font-weight: bold } /* Generic.Strong */
.highlight .gu { color: #8be9fd } /* Generic.Subheading */
.highlight .kc { color: #ffb86c } /* Keyword.Constant */
.highlight .kd { color: #ff79c6 } /* Keyword.Declaration */
.highlight .kn { color: #ff79c6 } /* Keyword.Namespace */
.highlight .kp { color: #ff79c6 } /* Keyword.Pseudo */
.highlight .kr { color: #ff79c6 } /* Keyword.Reserved */
.highlight .kt { color: #569cd6 } /* Keyword.Type */
.highlight .m  { color: #bd93f9 } /* Literal.Number */
.highlight .s  { color: #f1fa8c } /* Literal.String */
.highlight .na { color: #50fa7b } /* Name.Attribute */
.highlight .nb { color: #ffb86c } /* Name.Builtin */
.highlight .nc { color: #8be9fd } /* Name.Class */
.highlight .no { color: #ffb86c } /* Name.Constant */
.highlight .nd { color: #8be9fd } /* Name.Decorator */
.highlight .ni { color: #ffb86c } /* Name.Entity */
.highlight .ne { color: #ff5555 } /* Name.Exception */
.highlight .nf { color: #50fa7b } /* Name.Function */
.highlight .nl { color: #f8f8f2 } /* Name.Label */
.highlight .nn { color: #f8f8f2 } /* Name.Namespace */
.highlight .nx { color: #f8f8f2 } /* Name.Other */
.highlight .py { color: #f8f8f2 } /* Name.Property */
.highlight .nt { color: #8be9fd } /* Name.Tag */
.highlight .nv { color: #f8f8f2 } /* Name.Variable */
.highlight .ow { color: #ff79c6 } /* Operator.Word */
.highlight .mf, .highlight .mh, .highlight .mi, .highlight .mo { color: #bd93f9 } /* Numbers */
.highlight .sb { color: #ffffff } /* Strings backtick */
.highlight .sc { color: #f1fa8c } /* String.Char */
.highlight .sd { color: #ffffff } /* String.Doc */
.highlight .s2, .highlight .s1 { color: #f1fa8c } /* String Double/Single */
.highlight .se { color: #ff79c6 } /* String Escape */
.highlight .sh { color: #f1fa8c } /* String.Heredoc */
.highlight .si { color: #ffffff } /* String.Interpol */
.highlight .sx { color: #f1fa8c } /* String.Other */
.highlight .sr { color: #ff79c6 } /* String.Regex */
.highlight .ss { color: #f1fa8c } /* String.Symbol */
.highlight .bp { color: #ff79c6 } /* Name.Builtin.Pseudo */
.highlight .vc, .highlight .vg, .highlight .vi { color: #f8f8f2 } /* Variable.Class/Global/Instance */
.highlight .il { color: #bd93f9 } /* Literal.Number.Integer.Long */


/* Remove any inline white background behind code text */
.highlight span {
  background-color: transparent !important;
}

.highlight code {
  background-color: transparent !important;
}


/* Final overrides: remove any stray lines or backgrounds */
.highlight,
.highlight * {
  background: transparent !important;
  border: none !important;
  box-shadow: none !important;
}
.highlight pre {
  margin: 0 !important;
  padding: 0 !important;
  background: transparent !important;
  border: none !important;
}


/* Remove leading gutter column to eliminate extra space */
.highlight td.gutter {
  display: none !important;
}

/* Align code cell flush-left */
.highlight td.code {
  padding-left: 0 !important;
}

/* Hide any trailing empty row at end of code block */
.highlight table tr:last-child {
  display: none !important;
}

